# wasm-compiler

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  install.sh  loadbalancer.py  tailscale-config  uninstall.sh
compiler/: build.sh  fetch.sh
compiler/base/: Cargo.toml  Dockerfile  attach_notice.sh  clean_up.sh  lib.rs  security_notice.txt
compiler/base/modify-cargo-toml/: Cargo.toml
compiler/base/orchestrator/src/: coordinator.rs
src/: client.rs  lib.rs  main.rs  service.rs
