[package]
name = "service-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
sha2 = "0.10.8"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tarpc = { version = "0.36.0", features = ["full"] }
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytes = { version = "1.10.1", features = ["serde"] }
regex = "1.11.1"

orchestrator = { path = "./compiler/base/orchestrator" }
serde_json = "1.0.140"
futures = "0.3.31"
moka = { version = "0.12.10", features = ["future"] }

[dev-dependencies]
tracing-test = "0.2.5"
dotenv = "0.15.0"
